--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -183,10 +183,11 @@ a:hover {
 
 .list-info {
     font-family: 'Lato', sans-serif;
-    font-size: 10px; 
+    font-size: 12px; 
     font-weight: 100;
     align-self: none;
     text-align: start;
+    line-height: 18px;
 }
 
 
@@ -222,6 +223,16 @@ a:hover {
     text-align: none;
 }
 
+.contact-main-article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    background: #23425f;
+    border-radius: 1rem;
+    max-width: 50%;
+    text-align: none;
+}
+
 .main-h2 {
     font-family: 'Oswald', sans-serif;
     color: white;
@@ -233,9 +244,11 @@ a:hover {
 .main-p {
     font-family: 'Lato', sans-serif;
     color: white;
-    font-size: 10px;
-    width: 100px;   
+    font-size: 12px;
+    font-weight: 500;
+    max-width: 80%;   
     height: 100px;
+    margin-top: -10px;
     align-self: center;
 }
 
@@ -543,6 +556,16 @@ footer {
         background: #23425f;
         border-radius: 0;
     }
+
+    .contact-main-article {
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        width: 60%;
+        height: 90%;
+        background: #23425f;
+        border-radius: 0;
+    }
     
     .main-h2 {
         color: white;
@@ -562,6 +585,7 @@ footer {
         height: 100px;
         align-self: center;
         text-align: center;
+        margin-top: 5%;
     }
 
     .contact-info {
