--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -12,27 +11,12 @@ body {
     height: 200vh;
 }
 
-/* "contact hänvisar till element som bara används
-    i min andra html fil, den andra sidan är en sida 
-    kär kontakt information beskrivs */
-
-.contact {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 200vh;
-}
-
-/* header elements*/
+/* 
+    header elements
+*/
 
 header {
     background: #13293d; 
-    background-image: url("../img/header1.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    border: px solid black;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -43,7 +27,6 @@ header {
 nav {
     grid-column: 1/7;
     grid-row: 1/2;
-    border: px solid black;
     display: flex;
     align-items: center;
     background: none;
@@ -57,7 +40,6 @@ ul {
 li {
     display: flex;
     justify-content: space-around;
-    border: px solid black;
     width: 100%;
     height: 5;
     text-decoration: none;
@@ -82,7 +64,6 @@ a:hover {
 .searchbar {
     grid-column: 1/7;
     grid-row: 2/3;
-    border: px solid yellow;
 }
 
 
@@ -105,24 +86,30 @@ a:hover {
 }
 
 
-/* main elements */
+/* 
+    main elements 
+*/
+
+/*  
+    "contact" hänvisar till element som bara används
+    i min andra html fil, den andra sidan är en sida 
+    där kontakt information beskrivs 
+*/
 
 .contact-main {
     background: #f2f2f2;
     display: grid;
     grid-template-columns: repeat(1 ,1fr);
     grid-template-rows: repeat(2, 1fr);
-    border: px solid red;
     width: 100%;
     height: 60%;
 }
 
-.desktop-only {
+.home-main {
     background: #f2f2f2;
     display: grid;
     grid-template-columns: repeat(2 ,1fr);
     grid-template-rows: repeat(2, 1fr);
-    border: px solid red;
     width: 100%;
     height: 60%;
 }
@@ -131,7 +118,6 @@ a:hover {
     grid-column: 1/2;
     grid-row: 1/2;
     display: flex;
-    border: px solid black;
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -142,7 +128,6 @@ a:hover {
     grid-column: 1;
     grid-row: 1/2;
     display: flex;
-    border: px solid black;
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -153,7 +138,6 @@ a:hover {
     grid-column: 2/3;
     grid-row: 1/2;
     display: flex;
-    border: px solid black;
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -164,12 +148,16 @@ a:hover {
     grid-column: 1;
     grid-row: 2/3;
     display: flex;
-    border: px solid black;
     height: 100%;
     width: 100%;
     justify-content: center;
     align-items: center;  
 }
+
+/* 
+    "contact-info" är en li tag där jag skrivit ut
+    kontakt information i en form av en lista 
+*/
 
 .contact-info {
     display: flex;
@@ -195,7 +183,6 @@ a:hover {
     grid-column: 1/2;
     grid-row: 2/3;
     display: flex;
-    border: px solid black;
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -206,7 +193,6 @@ a:hover {
     grid-column: 2/3;
     grid-row: 2/3;
     display: flex;
-    border: px solid black;
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -257,7 +243,6 @@ a:hover {
     align-self: center;
     width: 100%;
     height: 100px;
-    border: px solid black;
     padding: 0;
     margin: 0;
 
@@ -268,7 +253,9 @@ a:hover {
     height: 100%;
 }
 
-/* footer elements */
+/* 
+    footer elements 
+*/
 
 .f1 .f2 {
     width: 0px;
@@ -282,7 +269,6 @@ footer {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
     background-image: url("/img/three.png"); 
-    border: 1px solid #0000ff;
     width: 100%;
     height: 20%;
 }
@@ -303,7 +289,6 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: px solid black;
     border-radius: none;
 }
 
@@ -320,7 +305,9 @@ footer {
     border-radius: 10px;
 }
 
-/* mobile css rules end here */
+/*
+    mobile css rules end here 
+*/
 
 
 
@@ -341,46 +328,27 @@ footer {
 
 
 
-/* desktop css rules start here */
+/* 
+    desktop css rules start here 
+*/
 
 @media screen and (min-width: 700px) {
 
-    * {
-        box-sizing: border-box;
-    }
-    
     body {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        height: 300vh;
-    }
-
-    .contact {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
         height: 300vh;
     }
     
-    /* header elements*/
+    /* 
+        header elements
+    */
     
     header {
         /* background: #13293d; */
         background-image: url("../img/header.png");
         background-size: 100% 100%;
         background-repeat: no-repeat;
-        border: px solid black;
-        display: grid;
         grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        width: 100%;
-        height: 20%;
     }
     
     .contact-header {
@@ -388,12 +356,8 @@ footer {
         background-image: url("../img/header.png");
         background-size: 100% 100%;
         background-repeat: no-repeat;
-        border: px solid black;
-        display: grid;
         grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(3, 1fr);
-        width: 100%;
-        height: 20%;
     }
 
     nav {
@@ -401,37 +365,25 @@ footer {
         grid-row: 1/2;
         width: 100%;
         height: 50%;
-        border: px solid black;
-        display: flex;
-        align-items: center;
         background: #23425f;
     }
 
     ul {
-        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     
     li {
-        display: flex;
-        justify-content: space-around;
-        border: px solid black;
-        width: 100%;
-        text-decoration: none;
-        list-style-type: none;
-        text-align: center;
-    
+        align-items: center;
     }
     
     li > a {
         height: 100%;
         font-size: 24px;
-        color: white;
-        font-weight: 600;
-        text-decoration: none;
     }
 
     a:hover {
-        text-decoration: underline;
         color: whitesmoke;
     }
     
@@ -439,167 +391,73 @@ footer {
         height: 50%;
         grid-column: 1/3;
         grid-row: 1/2;
-        border: px solid yellow;
     }
     
     
     .h1-container {
-        display: flex;
-        border: px solid blue;
-        border-radius: none;
         background: #23425f;
         grid-column: 3/7;
         grid-row: 2/3;
-        justify-content: center;
-        align-items: center;
         text-align: center;
     }
      h1 {
         font-size: 40px;
         font-weight: 1000;
-        padding: 0;
-        margin: 0;
-        color: white;
     }
     
-    /* main elements */
+    /* 
+        main elements 
+    */
     
-    .desktop-only {
-        display: grid;
+    .home-main {
         background: #cfcece;
         grid-template-columns: repeat(2 ,1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
-
-    main {
-        background: #f2f2f2;
-        display: flex;
-        border: px solid red;
-        width: 100%;
-        height: 60%;
     }
 
     .contact-main {
-        background: #f2f2f2;
-        display: grid;
         background: #cfcece;
         grid-template-columns: repeat(6 ,1fr);
         grid-template-rows: repeat(2, 1fr);
-        width: 100%;
-        height: 60%;
-    }
-    
-    .main-section1 {
-        display: flex;
-        border: none;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
     }
 
     .contact-section1 {
         grid-column: 2/6;
         grid-row: 1/2;
-        display: flex;
-        border: px solid black;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .main-section2 {
-        display: flex;
-        border: none;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
     }
 
     .contact-section2 {
         grid-column: 2/6;
         grid-row: 2/3;
-        display: flex;
-        border: px solid black;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
     }
 
-    .main-section3 {
-        display: flex;
-        border: none;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .main-section4 {
-        display: flex;
-        border: none;
-        height: 100%;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    
     .main-article {
-        display: flex;
-        flex-direction: column;
-        justify-content: center; 
         width: 60%;
         height: 90%;
-        background: #23425f;
         border-radius: 0;
     }
 
     .contact-main-article {
-        display: flex;
-        flex-direction: column;
-        justify-content: center; 
         width: 60%;
         height: 90%;
-        background: #23425f;
         border-radius: 0;
     }
     
     .main-h2 {
-        color: white;
         font-size: 30px;
-        align-self: center;
         width: 100%;
         text-align: center;
         margin-bottom: -1px;
     }
     
     .main-p {
-        color: white;
         font-size: 16px;
-        font-weight: 500;
         text-align: none;
         width: 90%;   
-        height: 100px;
-        align-self: center;
         text-align: center;
         margin-top: 5%;
     }
 
-    .contact-info {
-        display: flex;
-        flex-direction: column;
-        width: 100%; 
-        height: 100px; 
-        align-self: center;
-        justify-content: center;
-        margin-bottom: 20px;
-    }
-
     .list-info {
-        font-family: 'Lato', sans-serif;
         color: white;
         font-size: 16px;
         font-weight: 500;
@@ -611,47 +469,25 @@ footer {
     }
     
     .image-container {
-        display: flex;
-        align-self: center;
-        width: 100%;
-        height: 60%;
-        border: px solid black;
-        padding: 0;
-        margin: 0;
-    
-    }
-    
-    .image {
-        width: 100%;
         height: 100%;
-    }
-    
+    }   
 
-
-    /* footer elements */
-    
-
+    /* 
+        footer elements 
+    */
 
     footer {
         /* background: #13293d; */
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: none;
         background-color: rgba(255, 0, 0, 0);
-        border: 0px solid blue;
-        width: 100%;
-        height: 20%;
     }
 
     .contact-footer {
         /* background: #13293d; */
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: none;
         background-color: rgba(255, 0, 0, 0);
-        border: 0px solid blue;
-        width: 100%;
-        height: 20%;
     }
 
     .f1 {
@@ -662,27 +498,16 @@ footer {
     }
 
     .footer-section {
-        color: black;
         position: absolute;
-        display: flex;
         width: 99%;
         height: 60%;
-        justify-content: center;
-        align-items: center;
     }
 
     .footer-article {
-        background: #13293d;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        border: px solid black;
         margin-left: 30%;
         margin-right: 30%;
         padding: 20px;
         height: 50%;
-        border-radius: none;
     }
 
     .footer-p {
@@ -702,6 +527,6 @@ footer {
         background-size: 100% 100%;
         background-repeat: no-repeat;
     }
-    
+} /* Desktop css rules end here */
 
-}
+/* the css document ends here */
