--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -328,12 +328,29 @@ footer {
 
 @media screen and (min-width: 600px) and (max-width: 699px) {
     .main-article {
-    max-width: 50%;
+    max-width: 55%;
     }
 
 
     .contact-main-article {
     max-width: 30%;
+    }
+}
+
+@media screen and (min-width: 700px) and (max-width: 999px) {
+
+    .main-article {
+    max-width: 60%;
+    max-height: 60%;
+    }
+
+    .contact-main-article {
+    max-width: 50%;
+    max-height: 60%;
+    }
+
+    .main-p {
+        font-size: 14px;
     }
 }
 
@@ -363,6 +380,11 @@ footer {
 /* 
     desktop css rules start here 
 */
+@media screen and (min-width: 1000px) {
+    .main-p {
+        font-size: 16px;
+    }
+}
 
 @media screen and (min-width: 700px) {
 
@@ -461,7 +483,6 @@ footer {
     }
     
     .main-p {
-        font-size: 16px;
         text-align: none;
         width: 90%;   
         text-align: center;
