--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -45,7 +45,6 @@ li {
     text-decoration: none;
     list-style-type: none;
     text-align: center;
-
 }
 
 li > a {
@@ -164,8 +163,8 @@ a:hover {
     height: 100px; 
     align-self: center;
     justify-content: center;
-    margin-bottom: 20px;
     flex-wrap: wrap-reverse;
+    margin-bottom: 10px;
 }
 
 .list-info {
@@ -374,8 +373,8 @@ footer {
     }
     
     .contact-main-article {
-        max-width: 60%;
-        max-height: 50%;
+
+        max-height: 80%;
     }
 }
 
@@ -405,17 +404,17 @@ footer {
 /* 
     desktop css rules start here 
 */
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1000px) and (min-height: 500px) {
     .main-p {
         font-size: 16px;
     }
-}
-
-@media screen and (min-width: 700px) {
 
     body {
         height: 300vh;
     }
+}
+
+@media screen and (min-width: 700px) {
     
     /* 
         header elements
